--- a/projects/core.vcxproj
+++ b/projects/core.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="..\source\core\board\NstBoardUnlFam250Schi24.hpp" />
     <ClInclude Include="..\source\core\board\NstBoardUnlRetX7Gbl.hpp" />
     <ClInclude Include="..\source\core\NstHomebrew.hpp" />
+    <ClInclude Include="..\source\core\NstRunTimer.hpp" />
     <ClInclude Include="..\source\core\NstVideoFilterxBR.hpp" />
     <ClInclude Include="..\source\core\vssystem\NstVsRbiBaseball.hpp" />
     <ClInclude Include="..\source\core\vssystem\NstVsSuperXevious.hpp" />
@@ -480,6 +481,7 @@
     <ClCompile Include="..\source\core\board\NstBoardUnlFam250Schi24.cpp" />
     <ClCompile Include="..\source\core\board\NstBoardUnlRetX7Gbl.cpp" />
     <ClCompile Include="..\source\core\NstHomebrew.cpp" />
+    <ClCompile Include="..\source\core\NstRunTimer.cpp" />
     <ClCompile Include="..\source\core\NstVideoFilterxBR.cpp" />
     <ClCompile Include="..\source\core\vssystem\NstVsRbiBaseball.cpp" />
     <ClCompile Include="..\source\core\vssystem\NstVsSuperXevious.cpp" />
